--- a/app/src/main/res/layout/activity_generation.xml
+++ b/app/src/main/res/layout/activity_generation.xml
@@ -8,30 +8,119 @@
     android:background="@color/white"
     tools:context=".GenerationActivity">
 
-    <ImageButton
-        android:id="@+id/menuButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="5dp"
-        android:background="@color/transparent"
-        android:onClick="onClickMenu"
-        android:scaleType="fitCenter"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/menu_icon" />
+        android:background="#AA000000">
+        <ImageButton
+            android:id="@+id/menuButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:onClick="onClickMenu"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/menu_icon"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginHorizontal="5dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:text="("
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:backgroundTint="#11AAAAAA" />
+            <TextView
+                android:id="@+id/generationName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="ГРАДИЕНТ"
+                android:textSize="29sp"
+                android:textColor="@color/white"/>
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:text=")"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:backgroundTint="#11AAAAAA"/>
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/settingsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/settings_icon"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@color/transparent"
+            android:layout_marginHorizontal="5dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageView
+        android:id="@+id/mainImage"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        app:srcCompat="@drawable/image_placeholder" />
 
     <FrameLayout
-        android:id="@+id/menuContainer"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@+id/menuButton"
-        app:layout_constraintTop_toBottomOf="@+id/menuButton"
-        android:paddingTop="5dp">
-        <fragment
-            android:name="com.example.wallpapergenerator.PopupMenuFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout="@layout/fragment_popup_menu"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="10dp">
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_export_image"
+            android:name="com.example.wallpapergenerator.ExportImageFragment"/>
     </FrameLayout>
 
+    <Button
+        android:id="@+id/nextImageGenerationButton"
+        android:layout_width="200dp"
+        android:layout_height="600dp"
+        android:background="@color/transparent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:background="@color/black"
+        tools:text="Next Image Generation Zone" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/generationIndicator"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        app:layout_constraintEnd_toEndOf="@+id/header"
+        tools:backgroundTint="@color/black"
+        />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/settingsFragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@layout/fragment_generation_parameters"
+        android:name="com.example.wallpapergenerator.GenerationSettingsFragment"
+        android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
