Связь кнопок экспорта с viewModel

--- a/app/src/main/res/layout/fragment_export_image.xml
+++ b/app/src/main/res/layout/fragment_export_image.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <ImageButton
-            android:id="@+id/imageButton5"
+            android:id="@+id/saveImageButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
@@ -27,7 +27,7 @@
             android:contentDescription="Download" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/setIamgeAsWallpaperButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
@@ -38,7 +38,7 @@
             android:contentDescription="Set wallpaper" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/addImageToGalleryButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
