--- a/app/src/main/res/layout/activity_generation.xml
+++ b/app/src/main/res/layout/activity_generation.xml
@@ -113,7 +113,8 @@
         android:layout_height="20dp"
         app:layout_constraintTop_toBottomOf="@+id/header"
         app:layout_constraintEnd_toEndOf="@+id/header"
-        tools:backgroundTint="@color/black"
+        tools:backgroundTint="@color/transparent"
+        app:cardElevation="0dp"
         />
 
     <androidx.fragment.app.FragmentContainerView
