--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AuthActivity"
-    android:orientation="vertical">
+    tools:context=".AuthorizationFragment"
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <Button
         android:id="@+id/to_back_button"
