--- a/app/src/main/res/layout/fragment_outside_gallary.xml
+++ b/app/src/main/res/layout/fragment_outside_gallary.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FirstFragment">
+    tools:context=".OutsideGalleryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/galleryRecyclerView"
