--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AuthActivity"
-    android:orientation="vertical">
+    tools:context=".RegistrationFragment"
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <Button
         android:id="@+id/to_back_button"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@color/transparent"
+        android:text="(-"
         android:textColor="@color/black"
-        android:textSize="25sp"
-        android:text="(-" />
+        android:textSize="25sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +25,7 @@
         android:gravity="center">
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/editTextTextPersonName2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -32,26 +33,42 @@
             android:hint="Имя" />
 
         <EditText
-            android:id="@+id/editTextTextPassword2"
+            android:id="@+id/editTextTextEmailAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textEmailAddress"
+            android:hint="Почта"/>
+
+        <EditText
+            android:id="@+id/editTextTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword"
             android:hint="Пароль"/>
 
-        <Button
-            android:id="@+id/button7"
+        <EditText
+            android:id="@+id/editTextTextPassword3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Войти"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:hint="Повторите пароль"/>
+
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Зарегистрироваться"
             android:layout_marginTop="20dp"/>
 
         <Button
-            android:id="@+id/to_register_button"
+            android:id="@+id/to_authorize_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Создать новый аккаунт"
+            android:text="Уже есть аккаунт"
             android:layout_marginTop="50dp"/>
-
     </LinearLayout>
+
 </LinearLayout>
