--- a/app/src/main/res/navigation/auth_navigation.xml
+++ b/app/src/main/res/navigation/auth_navigation.xml
@@ -2,14 +2,14 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
+    android:id="@+id/gallery_navigation"
     app:startDestination="@id/FirstFragment">
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.example.wallpapergenerator.FirstFragment"
+        android:name="com.example.wallpapergenerator.AuthorizationFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_authorization">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -17,9 +17,9 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.example.wallpapergenerator.SecondFragment"
+        android:name="com.example.wallpapergenerator.RegistrationFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_registration">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
