--- a/app/src/main/res/layout/fragment_generation_parameters.xml
+++ b/app/src/main/res/layout/fragment_generation_parameters.xml
@@ -32,7 +32,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             app:layoutManager="LinearLayoutManager"
-            tools:context=".GenerationSettingsFragment"
+            tools:context=".SettingsFragment"
             tools:listitem="@layout/fragment_item" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
