--- a/app/src/main/res/navigation/gallery_navigation.xml
+++ b/app/src/main/res/navigation/gallery_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/FirstFragment"
         android:name="com.example.wallpapergenerator.OutsideGalleryFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_outside_gallary">
+        tools:layout="@layout/fragment_gallary">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -17,9 +17,9 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.example.wallpapergenerator.OwnGalleryFragment"
+        android:name="com.example.wallpapergenerator.CollectionFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_own_gallery">
+        tools:layout="@layout/fragment_collection">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
