--- a/app/src/main/res/layout/activity_generation.xml
+++ b/app/src/main/res/layout/activity_generation.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="#AA000000">
         <ImageButton
-            android:id="@+id/menuButton"
+            android:id="@+id/toMenuButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
