--- a/app/src/main/res/layout/activity_generation.xml
+++ b/app/src/main/res/layout/activity_generation.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="#AA000000">
+        android:background="@color/header_color_default">
         <ImageButton
             android:id="@+id/toMenuButton"
             android:layout_width="wrap_content"
