--- a/app/src/main/res/drawable/heart.xml
+++ b/app/src/main/res/drawable/heart.xml
@@ -1,4 +1,4 @@
-<vector android:height="100dp" android:viewportHeight="32"
-    android:viewportWidth="32" android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000" android:pathData="M0.256,12.16q0.544,2.08 2.08,3.616l13.664,14.144 13.664,-14.144q1.536,-1.536 2.08,-3.616t0,-4.128 -2.08,-3.584 -3.584,-2.08 -4.16,0 -3.584,2.08l-2.336,2.816 -2.336,-2.816q-1.536,-1.536 -3.584,-2.08t-4.128,0 -3.616,2.08 -2.08,3.584 0,4.128z"/>
+<vector android:height="100dp" android:viewportHeight="1920"
+    android:viewportWidth="1920" android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000" android:fillType="evenOdd" android:pathData="M1771.7,291C1675.7,193.7 1547.9,140 1411.8,140h-0.1c-136.1,0 -263.8,53.7 -359.6,150.9 -37.6,38.1 -68.6,81 -92.3,127.4 -23.6,-46.4 -54.6,-89.4 -92.1,-127.3C771.9,193.7 644.2,140 508,140h-0.1c-136,0 -263.8,53.7 -359.8,151 -197.7,200.6 -197.7,527.1 1.7,729.1l810.1,760.2 811.9,-761.7c197.7,-200.4 197.7,-526.9 0,-727.5"/>
 </vector>
