--- a/app/src/main/res/layout/activity_generation.xml
+++ b/app/src/main/res/layout/activity_generation.xml
@@ -79,19 +79,15 @@
         app:layout_constraintTop_toBottomOf="@+id/header"
         app:srcCompat="@drawable/image_placeholder" />
 
-    <FrameLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/exportImageFragmentContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="10dp">
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragmentContainer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:layout="@layout/fragment_export_image"
-            android:name="com.example.wallpapergenerator.ExportImageFragment"/>
-    </FrameLayout>
+        tools:layout="@layout/fragment_export_image"
+        android:name="com.example.wallpapergenerator.ExportImageFragment"/>
 
     <Button
         android:id="@+id/nextImageGenerationButton"
