--- a/app/src/main/res/layout/fragment_dropdown_parameter.xml
+++ b/app/src/main/res/layout/fragment_dropdown_parameter.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="@color/black">
+    tools:background="@color/black"
+    android:layout_marginVertical="5dp">
     <TextView
         android:id="@+id/descriptionField"
         android:layout_width="wrap_content"
