--- a/app/src/main/res/layout/fragment_expanded_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_expanded_wallpaper.xml
@@ -25,4 +25,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/exportImageFragmentContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout="@layout/fragment_export_image"
+        android:name="com.example.wallpapergenerator.ExportImageFragment"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
