--- a/app/src/main/res/layout/fragment_export_image.xml
+++ b/app/src/main/res/layout/fragment_export_image.xml
@@ -16,47 +16,26 @@
         android:orientation="vertical">
 
         <ImageButton
-            android:id="@+id/saveImageButton"
+            android:id="@+id/likeButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginVertical="10dp"
             android:background="@color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/download_icon"
-            android:contentDescription="Download" />
-
-        <ImageButton
-            android:id="@+id/setIamgeAsWallpaperButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:background="@color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/set_wallpaper"
+            android:scaleType="centerInside"
+            android:src="@drawable/heart_void"
             android:contentDescription="Set wallpaper" />
 
         <ImageButton
-            android:id="@+id/addImageToGalleryButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:background="@color/transparent"
-            android:src="@drawable/plus_icon"
-            android:contentDescription="Add" />
-
-        <ImageButton
-            android:id="@+id/expandButton"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:id="@+id/saveImageButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="15dp"
             android:background="@color/transparent"
-            android:onClick="onExpandClick"
             android:scaleType="fitCenter"
-            android:src="@drawable/export_icon"
-            android:contentDescription="Expand" />
+            android:src="@drawable/download_icon"
+            android:contentDescription="Download" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
