--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -86,7 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_generation_parameters"
-        android:name="com.example.wallpapergenerator.SettingsFragment"
+        android:name="com.example.wallpapergenerator.BlankFragment"
         android:visibility="gone"/>
 
     <androidx.fragment.app.FragmentContainerView
@@ -94,7 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_generation_parameters"
-        android:name="com.example.wallpapergenerator.ExpandedWallpaperFragment"
+        android:name="com.example.wallpapergenerator.BlankFragment"
         android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
